# TorsionEngine

./: .gitignore  Makefile  README.md  vcpkg.json
cmake/: lib.cmake
engine/bindings/: os.i  window.i
engine/managed/: Directory.Build.props
engine/managed/TestApp/: Program.cs
engine/native/: CMakeLists.txt  test.cpp
engine/native/os/: CMakeLists.txt  window.cpp  window.h
scripts/: compile.py  util.py
